# Currygle

./: .gitignore  .gitmodules  .ruby-gemset  CurryInfo.hs  CurrySearch.cabal  Currygle.cabal  Gemfile  Makefile  README.md  test.txt
CurrySearch/: CurrySearch.cabal  Currygle.cabal  README.md
CurrySearch/example/: test.txt
CurrySearch/example/DOC_AbsCurry/: AbsCurry.cdoc
CurrySearch/example/DOC_AbsCurryIO/: AbsCurryIO.cdoc
CurrySearch/example/DOC_AbstractCurry/: AbstractCurry.cdoc
CurrySearch/example/DOC_AbstractCurryPrinter/: AbstractCurryPrinter.cdoc
CurrySearch/example/DOC_AllSolutions/: AllSolutions.cdoc
CurrySearch/example/DOC_Array/: Array.cdoc
CurrySearch/example/DOC_Assertion/: Assertion.cdoc
CurrySearch/example/DOC_CLPB/: CLPB.cdoc
CurrySearch/example/DOC_CLPFD/: CLPFD.cdoc
CurrySearch/example/DOC_CLPR/: CLPR.cdoc
CurrySearch/example/DOC_CPNS/: CPNS.cdoc
CurrySearch/example/DOC_CSV/: CSV.cdoc
CurrySearch/example/DOC_CategorizedHtmlList/: CategorizedHtmlList.cdoc
CurrySearch/example/DOC_Char/: Char.cdoc
CurrySearch/example/DOC_Combinatorial/: Combinatorial.cdoc
CurrySearch/example/DOC_CompactFlatCurry/: CompactFlatCurry.cdoc
CurrySearch/example/DOC_Constraint/: Constraint.cdoc
CurrySearch/example/DOC_CurryStringClassifier/: CurryStringClassifier.cdoc
CurrySearch/example/DOC_DaVinci/: DaVinci.cdoc
CurrySearch/example/DOC_Database/: Database.cdoc
CurrySearch/example/DOC_Dequeue/: Dequeue.cdoc
CurrySearch/example/DOC_Distribution/: Distribution.cdoc
CurrySearch/example/DOC_Dynamic/: Dynamic.cdoc
CurrySearch/example/DOC_FileGoodies/: FileGoodies.cdoc
CurrySearch/example/DOC_FiniteMap/: FiniteMap.cdoc
CurrySearch/example/DOC_Flat/: Flat.cdoc
CurrySearch/example/DOC_Flat2Fcy/: Flat2Fcy.cdoc
CurrySearch/example/DOC_FlatCurry/: FlatCurry.cdoc
CurrySearch/example/DOC_FlatCurryGoodies/: FlatCurryGoodies.cdoc
CurrySearch/example/DOC_FlatCurryRead/: FlatCurryRead.cdoc
CurrySearch/example/DOC_FlatCurryShow/: FlatCurryShow.cdoc
CurrySearch/example/DOC_FlatCurryTools/: FlatCurryTools.cdoc
CurrySearch/example/DOC_FlatCurryXML/: FlatCurryXML.cdoc
CurrySearch/example/DOC_FlatTools/: FlatTools.cdoc
CurrySearch/example/DOC_FlatXML/: FlatXML.cdoc
CurrySearch/example/DOC_FlexRigid/: FlexRigid.cdoc
CurrySearch/example/DOC_Float/: Float.cdoc
CurrySearch/example/DOC_GUI/: GUI.cdoc
CurrySearch/example/DOC_Global/: Global.cdoc
CurrySearch/example/DOC_GlobalVariable/: GlobalVariable.cdoc
CurrySearch/example/DOC_GraphInductive/: GraphInductive.cdoc
CurrySearch/example/DOC_HTML/: CPNS.cdoc  Char.cdoc  Directory.cdoc  Distribution.cdoc  FileGoodies.cdoc  HTML.cdoc  HtmlCgi.cdoc  IO.cdoc  IOExts.cdoc  Maybe.cdoc  NamedSocket.cdoc  Profile.cdoc  PropertyFile.cdoc  ReadNumeric.cdoc  ReadShowTerm.cdoc  Socket.cdoc  Time.cdoc  Unsafe.cdoc
CurrySearch/example/DOC_HtmlCgi/: HtmlCgi.cdoc
CurrySearch/example/DOC_HtmlParser/: HtmlParser.cdoc
CurrySearch/example/DOC_IO/: IO.cdoc
CurrySearch/example/DOC_IOExts/: IOExts.cdoc
CurrySearch/example/DOC_Integer/: Integer.cdoc
CurrySearch/example/DOC_JavaScript/: JavaScript.cdoc
CurrySearch/example/DOC_KeyDB/: KeyDB.cdoc
CurrySearch/example/DOC_KeyDatabase/: KeyDatabase.cdoc
CurrySearch/example/DOC_KeyDatabaseSQLite/: KeyDatabaseSQLite.cdoc
CurrySearch/example/DOC_Mail/: Mail.cdoc
CurrySearch/example/DOC_Markdown/: Markdown.cdoc
CurrySearch/example/DOC_NamedSocket/: NamedSocket.cdoc
CurrySearch/example/DOC_Parser/: Parser.cdoc
CurrySearch/index/: Readme.md  firstprog.cdoc  ix.bin.idx
CurrySearch/src/: Application.hs  CoreData.hs  CurryIndexer.hs  CurryInfo.hs  CurrySearch.hs  CurryState.hs  EvalSearchC.hs  FilesAndLoading.hs  Helpers.hs  IndexTypes.hs  IndexTypesC.hs  Main.hs  Parser.hs  ParserTemp.hs  ParserTests.hs  Site.hs  SiteC.hs
DOC_HTML/: Directory.cdoc  Distribution.cdoc  Global.cdoc  HTML.cdoc  HtmlCgi.cdoc  IO.cdoc  IOExts.cdoc  List.cdoc  Maybe.cdoc  NamedSocket.cdoc  Prelude.cdoc  Profile.cdoc  PropertyFile.cdoc  ReadNumeric.cdoc  ReadShowTerm.cdoc  Socket.cdoc  System.cdoc  Time.cdoc
TeXerei/: bachelor.lhs  bachelor.tex
TeXerei/extras/: anhang.lhs  ebnf.lhs  header.lhs  parser.lhs  titelseite.lhs
TeXerei/kapitel/: kapitel1.lhs  kapitel2.lhs  kapitel3.lhs  kapitel4.lhs  kapitel5.lhs
TeXerei/literatur/: bib.bib
cdoc/: CurryDoc.curry  CurryDoc.state  CurryDocCDoc.curry  CurryDocHtml.curry  CurryDocTeX.curry  Makefile
cdoc/.curry/: CurryDoc.fcy  CurryDoc.fint  CurryDocCDoc.fcy  CurryDocCDoc.fint  CurryDocHtml.fcy  CurryDocHtml.fint  CurryDocParams.fcy  CurryDocParams.fint  CurryDocRead.fcy  CurryDocRead.fint  CurryDocTeX.fcy  CurryDocTeX.fint
config/: deploy.rb
examples/DOC_AbstractCurry.Pretty/: AbstractCurry.Pretty.cdoc  AbstractCurry.Pretty.html  AbstractCurry.Pretty_curry.html  AbstractCurry.Select.cdoc  AbstractCurry.Select.html  AbstractCurry.Types.cdoc  AbstractCurry.Types.html  AbstractCurry.Types_curry.html  Dequeue.cdoc  Dequeue.html  Dequeue_curry.html  List.html  List_curry.html  Maybe.html  Maybe_curry.html  Prelude.html  Pretty.cdoc  Pretty.html  Pretty_curry.html  cindex.html  findex.html  index.html
examples/DOC_AbstractCurry.Select/: AbstractCurry.Select.html  AbstractCurry.Select_curry.html  AbstractCurry.Types.html  List.cdoc  List.html  Maybe.cdoc  Maybe.html  Prelude.html  Prelude_curry.html  cindex.html  findex.html  index.html
examples/DOC_AbstractCurry.Types/: AbstractCurry.Types.html  Prelude.cdoc  Prelude.html  cindex.html  findex.html  index.html
examples/DOC_Prelude/: Prelude.html  cindex.html  findex.html  index.html
index/: ix.bin.doc
resources/static/: ajax.js  bootstrap.js  completions.js  searching.js  stylesheet.css
resources/templates/: frontpage.tpl
src/: Application.hs  ApplicationC.hs  CoreData.hs  CurryIndexer.hs  CurryInfo.hs  CurrySearch.hs  CurryState.hs  Currygle.hs  FilesAndLoading.hs  Helpers.hs  IndexTypes.hs  Main.hs  Parser.hs  ParserTemp.hs  ParserTests.hs  QueryParser.hs  Site.hs  XmlHelper.hs
static/: bootstrap.js  searching.js  stylesheet.css
(+53 files in other folders)
