name:          Currygle
version:       0.1
author:        Sandra Dylus
stability:     experimental
category:      Text, Data, Web
synopsis:      Curr(y)gle
description:   Curr(y)gle - An API search engine for Curry
cabal-version: >= 1.6
build-type:    Simple
tested-with:   GHC == 7.6.2

Flag old-base
  default: False
  manual: False

executable curryIndexer
  main-is:        CurryIndexer.hs
  hs-source-dirs: src
  other-modules:  CurryInfo, FilesAndLoading, Helpers, IndexTypes

  build-depends:  base                   == 4.*
                , filepath               == 1.*
                , directory
                , Holumbus-Searchengine  >= 1.2.3
                , binary                 >= 0.5  && < 1
                , deepseq
                , text
                , transformers
                , split

  ghc-options:  -threaded
                -O2
                -Wall
                -fwarn-tabs
                -funbox-strict-fields

executable curryServer
  main-is:        Main.hs
  hs-source-dirs: src
  other-modules:  CurryInfo, FilesAndLoading, Helpers, IndexTypes
                , CurrySearch, QueryParser, Application, Site

  build-depends:  bytestring                >= 0.9.1   && < 0.11
                , heist                     >= 0.11    && < 0.12
                , MonadCatchIO-transformers >= 0.2.1   && < 0.4
                , mtl                       >= 2       && < 3
                , snap                      >= 0.11    && < 0.12
                , snap-core                 >= 0.9     && < 0.10
                , snap-server               >= 0.9     && < 0.10
                , snap-loader-static        >= 0.9     && < 0.10
                , text                      >= 0.11    && < 0.12
                , time                      >= 1.1     && < 1.5
                , xmlhtml                   >= 0.1

                , json                      >= 0.4    && < 1
                , Holumbus-Searchengine     >= 1.2.3
                , binary                    >= 0.5
                , deepseq
                , parsec
                , containers
                , transformers
                , unix
                , hashable                  >= 1.2.0.6
                , tagged                    <  0.5

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 3.9

  ghc-options:  -threaded
                -O2
                -Wall
                -fwarn-tabs
                -funbox-strict-fields
