name:          Currygle
version:       0.1
author:        Sandra Dylus
stability:     experimental
category:      Text, Data, Web
synopsis:      Curr(y)gle
description:   Curr(y)gle - An API search engine for Curry
cabal-version: >= 1.6
build-type:    Simple
tested-with:   GHC == 7.6.2

Flag old-base
  default: False
  manual: False

executable curryIndexer
  main-is:        CurryIndexer.hs
  hs-source-dirs: src
  other-modules:  CurryInfo, FilesAndLoading, Helpers, IndexTypes

  build-depends:  base                   == 4.*
                , filepath               == 1.*
                , directory
                , Holumbus-Searchengine  >= 1.2.6
                , binary                 >= 0.5  && < 1
                , deepseq
                , text
                , transformers
                , split

  ghc-options:  -threaded
                -O2
                -Wall
                -fwarn-tabs
                -funbox-strict-fields

executable curryServer
  main-is:        Main.hs
  hs-source-dirs: src
  other-modules:  CurryInfo, FilesAndLoading, Helpers, IndexTypes
                , CurrySearch, QueryParser, Application, Site

  build-depends:  bytestring
                , heist
                , snap                      >= 0.11
                , snap-core                 >= 0.9
                , snap-server               >= 0.9
                , snap-loader-static        >= 0.9
                , snap-extras
                , xmlhtml                   >= 0.1
                , Holumbus-Searchengine     >= 1.2.6.4
                , binary                    >= 0.5     && < 1
                , deepseq
                , parsec
                , containers
                , transformers
                , unix
                , hashable                  >= 1.2.0.6
                , lens
                , mtl
                , json

  ghc-options:  -threaded
                -O2
                -Wall
                -fwarn-tabs
                -funbox-strict-fields
